# smak

./: README.md  main.cpp
1 nedelya/task 2/: CMakeLists.txt
2 nedelya/: CMakeLists .txt  main .cpp
2 nedelya/include/: transformations.hpp  utils.h  vec3.h
2 nedelya/src/: transformations.cpp  utils.cpp  vec3.cpp
4 nedelya/: CMakeLists.txt
4 nedelya/include/: camera.h  hit.h  ray.h  transformations.h  utils.h  vec3.h
4 nedelya/src/: camera.cpp  hit.cpp  main.cpp  ray.cpp  transformations.cpp  utils.cpp  vec3.cpp
6 nedelya/: task1.cpp  task2.cpp  task3.cpp
7 or 8 week idk/: grid.cpp
task1/: CMakeLists.txt
task2/: CMakeLists.txt
